Solved footer problem and made unimportant sites redirect to the start page

--- a/src/assets/styles/scss/base/_base.scss
+++ b/src/assets/styles/scss/base/_base.scss
@@ -2,6 +2,7 @@ body {
   background-color: $background-secondary;
   font-family: Inter, sans-serif;
   width: 80vw;
+  min-height: 100dvh;
   margin-inline: auto;
 }
 
