footer fixed but new something wrong. WIll fix later. carousel working. Want diffrent? is only v1

--- a/src/assets/styles/scss/components/_book-info-box.scss
+++ b/src/assets/styles/scss/components/_book-info-box.scss
@@ -48,7 +48,7 @@
       border-radius: 15pt;
       position: absolute;
       z-index: 1;
-      background: linear-gradient(to bottom, rgba(252, 81, 71, 1) 100%, rgba(255, 238, 224, 1) 100%);
+      background-image: linear-gradient(to bottom, rgba(252, 81, 71, 1) 100%, rgba(255, 238, 224, 1) 100%);
       left: 0;
       right: 0;
       margin-left: auto;
