--- a/src/assets/styles/scss/layouts/_footer.scss
+++ b/src/assets/styles/scss/layouts/_footer.scss
@@ -6,10 +6,10 @@ footer {
   align-items: center;
   padding-block: 10pt;
   bottom: 0;
-  width: $body-width;
+  left: 0;
+  width: 100%;
   height: 50pt;
   z-index: 2;
-  position: fixed;
 
   nav {
     display: flex;
