--- a/src/assets/styles/scss/styles.css
+++ b/src/assets/styles/scss/styles.css
@@ -330,11 +330,58 @@ table {
   border-radius: 15pt;
   position: absolute;
   z-index: 1;
-  background: linear-gradient(to bottom, rgb(252, 81, 71) 100%, rgb(255, 238, 224) 100%);
+  background-image: linear-gradient(to bottom, rgb(252, 81, 71) 100%, rgb(255, 238, 224) 100%);
   left: 0;
   right: 0;
   margin-left: auto;
   margin-right: auto;
+}
+
+.book-carousel {
+  grid-column: 1/13;
+  margin-top: 10px;
+  padding: 10px;
+  border-radius: 15pt;
+  display: flex;
+  overflow-x: auto;
+  gap: 6pt;
+  margin-bottom: 40px;
+}
+.book-carousel .book-carousel-box {
+  flex: 0 0 calc(33.33% - 10px);
+  max-width: calc(33.33% - 10px);
+  padding: 10px;
+  border-radius: 15pt;
+  background-color: #FFEEE0;
+  position: relative;
+}
+.book-carousel .book-carousel-box .info-text {
+  padding: 10px;
+  overflow: hidden;
+}
+.book-carousel .book-carousel-box .info-text p {
+  text-decoration: none;
+  font-weight: normal;
+  font-size: 12pt;
+  line-height: 1;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+.book-carousel .book-carousel-box .info-text h2 {
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 20pt;
+  line-height: 1;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+.book-carousel .book-carousel-box img {
+  max-width: 100%;
+  height: auto;
+  border-radius: 15pt;
+  background-image: linear-gradient(to bottom, rgb(252, 81, 71) 100%, rgb(255, 238, 224) 100%);
 }
 
 header {
@@ -374,10 +421,10 @@ footer {
   align-items: center;
   padding-block: 10pt;
   bottom: 0;
-  width: 80vw;
+  left: 0;
+  width: 100%;
   height: 50pt;
   z-index: 2;
-  position: fixed;
 }
 footer nav {
   display: flex;
