--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -91,12 +91,10 @@ main {
   left: 1rem;
   overflow-wrap: break-word;
 }
-
 .error b {
   font-weight: 600;
   font-size: 14pt;
 }
-
 .error p {
   font-weight: normal;
   font-size: 12pt;
@@ -295,7 +293,6 @@ table {
   background-color: #FFEEE0;
   position: relative;
 }
-
 .book-info-box .info-text {
   position: absolute;
   z-index: 2;
@@ -303,7 +300,6 @@ table {
   bottom: 0;
   overflow: hidden;
 }
-
 .book-info-box .info-text p {
   text-decoration: none;
   font-weight: normal;
@@ -314,7 +310,6 @@ table {
   white-space: nowrap;
   text-overflow: ellipsis;
 }
-
 .book-info-box .info-text h2 {
   text-decoration: none;
   font-weight: bold;
@@ -326,7 +321,6 @@ table {
   white-space: nowrap;
   text-overflow: ellipsis;
 }
-
 .book-info-box img {
   justify-content: center;
   max-width: calc(100% - 20px);
@@ -353,7 +347,6 @@ table {
   gap: 6pt;
   margin-bottom: 40px;
 }
-
 .book-carousel .book-carousel-box {
   flex: 0 0 calc(33.33% - 10px);
   max-width: calc(33.33% - 10px);
@@ -362,12 +355,10 @@ table {
   background-color: #FFEEE0;
   position: relative;
 }
-
 .book-carousel .book-carousel-box .info-text {
   padding: 10px;
   overflow: hidden;
 }
-
 .book-carousel .book-carousel-box .info-text p {
   text-decoration: none;
   font-weight: normal;
@@ -377,7 +368,6 @@ table {
   white-space: nowrap;
   text-overflow: ellipsis;
 }
-
 .book-carousel .book-carousel-box .info-text h2 {
   text-decoration: none;
   font-weight: bold;
@@ -387,7 +377,6 @@ table {
   white-space: nowrap;
   text-overflow: ellipsis;
 }
-
 .book-carousel .book-carousel-box img {
   max-width: 100%;
   height: auto;
@@ -403,17 +392,14 @@ header {
   padding-block: 10pt;
   height: 80pt;
 }
-
 header img {
   width: 200pt;
 }
-
 header nav {
   display: flex;
   align-items: center;
   gap: 15px;
 }
-
 header nav ul {
   list-style-type: none;
   padding: 0;
@@ -421,7 +407,6 @@ header nav ul {
   gap: 15px;
   align-items: center;
 }
-
 header nav .profile-picture {
   display: inline-block;
   width: 40pt;
@@ -431,7 +416,9 @@ header nav .profile-picture {
 }
 
 footer {
+  grid-column: 1/13;
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
   align-items: center;
   padding-block: 10pt;
@@ -441,13 +428,11 @@ footer {
   height: 50pt;
   z-index: 2;
 }
-
 footer nav {
   display: flex;
   align-items: center;
   gap: 15px;
 }
-
 footer nav ul {
   list-style-type: none;
   padding: 0;
@@ -455,7 +440,5 @@ footer nav ul {
   gap: 15px;
   align-items: center;
 }
-
-
 
 /*# sourceMappingURL=styles.css.map */
