--- a/src/assets/styles/scss/styles.css
+++ b/src/assets/styles/scss/styles.css
@@ -355,6 +355,15 @@ table {
   background-color: #FFEEE0;
   position: relative;
 }
+.book-carousel .book-carousel-box .send-value-button {
+  border-radius: 15pt;
+  font-size: 11pt;
+  font-weight: 600;
+  color: #4E2323;
+  background-color: #FFEEE0;
+  padding: 7pt 10pt;
+  filter: drop-shadow(0pt 2pt 5pt rgba(0, 0, 0, 0.15));
+}
 .book-carousel .book-carousel-box .info-text {
   padding: 10px;
   overflow: hidden;
@@ -416,7 +425,9 @@ header nav .profile-picture {
 }
 
 footer {
+  grid-column: 1/13;
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
   align-items: center;
   padding-block: 10pt;
