--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -91,10 +91,12 @@ main {
   left: 1rem;
   overflow-wrap: break-word;
 }
+
 .error b {
   font-weight: 600;
   font-size: 14pt;
 }
+
 .error p {
   font-weight: normal;
   font-size: 12pt;
@@ -293,6 +295,7 @@ table {
   background-color: #FFEEE0;
   position: relative;
 }
+
 .book-info-box .info-text {
   position: absolute;
   z-index: 2;
@@ -300,6 +303,7 @@ table {
   bottom: 0;
   overflow: hidden;
 }
+
 .book-info-box .info-text p {
   text-decoration: none;
   font-weight: normal;
@@ -310,6 +314,7 @@ table {
   white-space: nowrap;
   text-overflow: ellipsis;
 }
+
 .book-info-box .info-text h2 {
   text-decoration: none;
   font-weight: bold;
@@ -321,6 +326,7 @@ table {
   white-space: nowrap;
   text-overflow: ellipsis;
 }
+
 .book-info-box img {
   justify-content: center;
   max-width: calc(100% - 20px);
@@ -347,6 +353,7 @@ table {
   gap: 6pt;
   margin-bottom: 40px;
 }
+
 .book-carousel .book-carousel-box {
   flex: 0 0 calc(33.33% - 10px);
   max-width: calc(33.33% - 10px);
@@ -355,10 +362,22 @@ table {
   background-color: #FFEEE0;
   position: relative;
 }
+
+.book-carousel .book-carousel-box .send-value-button {
+  border-radius: 15pt;
+  font-size: 11pt;
+  font-weight: 600;
+  color: #4E2323;
+  background-color: #FFEEE0;
+  padding: 7pt 10pt;
+  filter: drop-shadow(0pt 2pt 5pt rgba(0, 0, 0, 0.15));
+}
+
 .book-carousel .book-carousel-box .info-text {
   padding: 10px;
   overflow: hidden;
 }
+
 .book-carousel .book-carousel-box .info-text p {
   text-decoration: none;
   font-weight: normal;
@@ -368,6 +387,7 @@ table {
   white-space: nowrap;
   text-overflow: ellipsis;
 }
+
 .book-carousel .book-carousel-box .info-text h2 {
   text-decoration: none;
   font-weight: bold;
@@ -377,6 +397,7 @@ table {
   white-space: nowrap;
   text-overflow: ellipsis;
 }
+
 .book-carousel .book-carousel-box img {
   max-width: 100%;
   height: auto;
@@ -392,14 +413,17 @@ header {
   padding-block: 10pt;
   height: 80pt;
 }
+
 header img {
   width: 200pt;
 }
+
 header nav {
   display: flex;
   align-items: center;
   gap: 15px;
 }
+
 header nav ul {
   list-style-type: none;
   padding: 0;
@@ -407,6 +431,7 @@ header nav ul {
   gap: 15px;
   align-items: center;
 }
+
 header nav .profile-picture {
   display: inline-block;
   width: 40pt;
@@ -428,11 +453,13 @@ footer {
   height: 50pt;
   z-index: 2;
 }
+
 footer nav {
   display: flex;
   align-items: center;
   gap: 15px;
 }
+
 footer nav ul {
   list-style-type: none;
   padding: 0;
@@ -440,5 +467,7 @@ footer nav ul {
   gap: 15px;
   align-items: center;
 }
+
+
 
 /*# sourceMappingURL=styles.css.map */
