--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -91,12 +91,10 @@ main {
   left: 1rem;
   overflow-wrap: break-word;
 }
-
 .error b {
   font-weight: 600;
   font-size: 14pt;
 }
-
 .error p {
   font-weight: normal;
   font-size: 12pt;
@@ -295,7 +293,6 @@ table {
   background-color: #FFEEE0;
   position: relative;
 }
-
 .book-info-box .info-text {
   position: absolute;
   z-index: 2;
@@ -303,7 +300,6 @@ table {
   bottom: 0;
   overflow: hidden;
 }
-
 .book-info-box .info-text p {
   text-decoration: none;
   font-weight: normal;
@@ -314,7 +310,6 @@ table {
   white-space: nowrap;
   text-overflow: ellipsis;
 }
-
 .book-info-box .info-text h2 {
   text-decoration: none;
   font-weight: bold;
@@ -326,7 +321,6 @@ table {
   white-space: nowrap;
   text-overflow: ellipsis;
 }
-
 .book-info-box img {
   justify-content: center;
   max-width: calc(100% - 20px);
@@ -353,16 +347,15 @@ table {
   gap: 6pt;
   margin-bottom: 40px;
 }
-
 .book-carousel .book-carousel-box {
-  flex: 0 0 calc(33.33% - 10px);
-  max-width: calc(33.33% - 10px);
+  flex: 0 0 calc(20% - 10px);
+  max-width: calc(20% - 10px);
+  height: auto;
   padding: 10px;
   border-radius: 15pt;
   background-color: #FFEEE0;
   position: relative;
 }
-
 .book-carousel .book-carousel-box .send-value-button {
   border-radius: 15pt;
   font-size: 11pt;
@@ -372,12 +365,10 @@ table {
   padding: 7pt 10pt;
   filter: drop-shadow(0pt 2pt 5pt rgba(0, 0, 0, 0.15));
 }
-
 .book-carousel .book-carousel-box .info-text {
   padding: 10px;
   overflow: hidden;
 }
-
 .book-carousel .book-carousel-box .info-text p {
   text-decoration: none;
   font-weight: normal;
@@ -387,7 +378,6 @@ table {
   white-space: nowrap;
   text-overflow: ellipsis;
 }
-
 .book-carousel .book-carousel-box .info-text h2 {
   text-decoration: none;
   font-weight: bold;
@@ -397,12 +387,17 @@ table {
   white-space: nowrap;
   text-overflow: ellipsis;
 }
-
 .book-carousel .book-carousel-box img {
-  max-width: 100%;
-  height: auto;
+  justify-content: center;
+  max-width: calc(100% - 20px);
+  width: auto;
+  height: calc(100% - 80px);
   border-radius: 15pt;
   background-image: linear-gradient(to bottom, rgb(252, 81, 71) 100%, rgb(255, 238, 224) 100%);
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 header {
@@ -413,17 +408,14 @@ header {
   padding-block: 10pt;
   height: 80pt;
 }
-
 header img {
   width: 200pt;
 }
-
 header nav {
   display: flex;
   align-items: center;
   gap: 15px;
 }
-
 header nav ul {
   list-style-type: none;
   padding: 0;
@@ -431,7 +423,6 @@ header nav ul {
   gap: 15px;
   align-items: center;
 }
-
 header nav .profile-picture {
   display: inline-block;
   width: 40pt;
@@ -453,13 +444,11 @@ footer {
   height: 50pt;
   z-index: 2;
 }
-
 footer nav {
   display: flex;
   align-items: center;
   gap: 15px;
 }
-
 footer nav ul {
   list-style-type: none;
   padding: 0;
@@ -467,7 +456,5 @@ footer nav ul {
   gap: 15px;
   align-items: center;
 }
-
-
 
 /*# sourceMappingURL=styles.css.map */
