--- a/src/assets/styles/scss/components/_book-carousel-box.scss
+++ b/src/assets/styles/scss/components/_book-carousel-box.scss
@@ -26,19 +26,24 @@
       background-color: $background-primary;
       padding: 7pt 10pt;
       filter: drop-shadow(0pt 2pt 5pt rgba(0, 0, 0, 0.15));
+
+    position: absolute;
+    right: 20pt;
+      bottom: 10pt;
     }
     .info-text {
       padding: 10px;
       overflow: hidden;
+      color: $text-color;
 
       p {
         text-decoration: none;
         font-weight: normal;
         font-size: 12pt;
         line-height: 1;
-        overflow: hidden;
         white-space: nowrap;
-        text-overflow: ellipsis;
+        text-overflow: '...';
+        margin-top: 10pt;
       }
 
       h2 {
@@ -46,9 +51,8 @@
         font-weight: bold;
         font-size: 20pt;
         line-height: 1;
-        overflow: hidden;
         white-space: nowrap;
-        text-overflow: ellipsis;
+        text-overflow: '...';
       }
     }
 
