--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -289,16 +289,16 @@ table {
   padding: 10px;
   border-radius: 15pt;
   filter: drop-shadow(0pt 2pt 5pt rgba(0, 0, 0, 0.15));
-  height: 315px;
   background-color: #FFEEE0;
   position: relative;
+  height: 630px;
 }
 .book-info-box .info-text {
   position: absolute;
-  z-index: 2;
+  z-index: 3;
   padding: 10px;
   bottom: 0;
-  overflow: hidden;
+  color: #4E2323;
 }
 .book-info-box .info-text p {
   text-decoration: none;
@@ -309,6 +309,7 @@ table {
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
+  margin-bottom: 10pt;
 }
 .book-info-box .info-text h2 {
   text-decoration: none;
@@ -317,9 +318,9 @@ table {
   position: relative;
   max-width: 100%;
   line-height: 1;
-  overflow: hidden;
   white-space: nowrap;
-  text-overflow: ellipsis;
+  text-overflow: "...";
+  margin-bottom: 10pt;
 }
 .book-info-box img {
   justify-content: center;
@@ -330,11 +331,23 @@ table {
   border-radius: 15pt;
   position: absolute;
   z-index: 1;
-  background-image: linear-gradient(to bottom, rgb(252, 81, 71) 100%, rgb(255, 238, 224) 100%);
   left: 0;
   right: 0;
   margin-left: auto;
   margin-right: auto;
+}
+
+.book-info-box:after {
+  content: "";
+  position: absolute;
+  bottom: 70px;
+  left: 0;
+  display: inline-block;
+  width: 100%;
+  height: 15%;
+  background: linear-gradient(rgba(0, 0, 0, 0), #FFEEE0);
+  z-index: 2;
+  border-radius: 15pt;
 }
 
 .book-carousel {
@@ -364,28 +377,31 @@ table {
   background-color: #FFEEE0;
   padding: 7pt 10pt;
   filter: drop-shadow(0pt 2pt 5pt rgba(0, 0, 0, 0.15));
+  position: absolute;
+  right: 20pt;
+  bottom: 10pt;
 }
 .book-carousel .book-carousel-box .info-text {
   padding: 10px;
   overflow: hidden;
+  color: #4E2323;
 }
 .book-carousel .book-carousel-box .info-text p {
   text-decoration: none;
   font-weight: normal;
   font-size: 12pt;
   line-height: 1;
-  overflow: hidden;
   white-space: nowrap;
-  text-overflow: ellipsis;
+  text-overflow: "...";
+  margin-top: 10pt;
 }
 .book-carousel .book-carousel-box .info-text h2 {
   text-decoration: none;
   font-weight: bold;
   font-size: 20pt;
   line-height: 1;
-  overflow: hidden;
   white-space: nowrap;
-  text-overflow: ellipsis;
+  text-overflow: "...";
 }
 .book-carousel .book-carousel-box img {
   justify-content: center;
