--- a/src/assets/styles/scss/components/_book-info-box.scss
+++ b/src/assets/styles/scss/components/_book-info-box.scss
@@ -37,7 +37,7 @@
       max-width: 100%;
       line-height: 1;
       white-space: nowrap;
-      text-overflow: '...';
+      text-overflow: ellipsis;
       margin-bottom: 10pt;
     }
   }
