--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -132,8 +132,6 @@ Quelle: https://github.com/danilowoz/wipe.css
  * 3. Default scroll behavior (not smooth)
  */
 html {
-  -ms-text-size-adjust: 100%; /* 1 */
-  -webkit-text-size-adjust: 100%; /* 1 */
   box-sizing: border-box; /* 2 */
   scroll-behavior: auto; /* 3 */
 }
@@ -145,8 +143,6 @@ html {
  */
 body {
   font-size: 16px; /* 1 */
-  -moz-osx-font-smoothing: grayscale; /* 2 */
-  -webkit-font-smoothing: antialiased; /* 2 */
 }
 
 /**
@@ -187,13 +183,11 @@ button,
 input,
 optgroup,
 textarea {
-  -webkit-appearance: none;
   appearance: none;
   overflow: visible;
   border: 0;
   outline: 0;
   font: inherit;
-  -webkit-font-smoothing: inherit;
   letter-spacing: inherit;
   color: inherit;
   background: none;
@@ -213,17 +207,6 @@ option {
 a:active,
 button:active {
   color: inherit;
-}
-
-/**
- * Prevent chrome autofill style
- */
-input:-webkit-autofill,
-input:-webkit-autofill:hover,
-input:-webkit-autofill:focus,
-input:-webkit-autofill:active {
-  -webkit-transition: "color 9999s ease-out, background-color 9999s ease-out";
-  -webkit-transition-delay: 9999s;
 }
 
 /**
@@ -319,7 +302,7 @@ table {
   max-width: 100%;
   line-height: 1;
   white-space: nowrap;
-  text-overflow: "...";
+  text-overflow: ellipsis;
   margin-bottom: 10pt;
 }
 .book-info-box img {
@@ -392,7 +375,7 @@ table {
   font-size: 12pt;
   line-height: 1;
   white-space: nowrap;
-  text-overflow: "...";
+  text-overflow: ellipsis;
   margin-top: 10pt;
 }
 .book-carousel .book-carousel-box .info-text h2 {
@@ -401,7 +384,7 @@ table {
   font-size: 20pt;
   line-height: 1;
   white-space: nowrap;
-  text-overflow: "...";
+  text-overflow: ellipsis;
 }
 .book-carousel .book-carousel-box img {
   justify-content: center;
