--- a/src/assets/styles/scss/styles.css
+++ b/src/assets/styles/scss/styles.css
@@ -90,6 +90,7 @@ main {
   animation: whoosh 1.25s;
   left: 1rem;
   overflow-wrap: break-word;
+  z-index: 9999;
 }
 .error b {
   font-weight: 600;
