--- a/src/assets/styles/scss/base/_base.scss
+++ b/src/assets/styles/scss/base/_base.scss
@@ -66,7 +66,7 @@ main {
 
 .error {
   background-color: $error-color;
-  position: absolute;
+  position: fixed;
   padding: 1rem;
   max-width: 100vw;
   bottom: 1rem;
