--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -2,117 +2,96 @@
   font-family: Inter;
   src: url(../fonts/Inter-Regular.ttf);
   font-weight: normal;
-  font-style: normal;
-}
+  font-style: normal; }
 @font-face {
   font-family: Inter;
   src: url(../fonts/Inter-Bold.ttf);
   font-weight: bold;
-  font-style: normal;
-}
+  font-style: normal; }
 @font-face {
   font-family: Inter;
   src: url(../fonts/Inter-SemiBold.ttf);
   font-weight: 600;
-  font-style: normal;
-}
+  font-style: normal; }
 body {
   background-color: #FFE4CF;
   font-family: Inter, sans-serif;
   width: 80vw;
   min-height: 100dvh;
-  margin-inline: auto;
-}
+  margin-inline: auto; }
 
 * {
   font-family: Inter, sans-serif;
-  font-style: normal;
-}
+  font-style: normal; }
 
 main {
-  grid-column: 1/13;
-}
+  grid-column: 1/13; }
 
 .grid-container {
   display: grid;
   grid-template-columns: repeat(12, 1fr);
-  gap: 6pt;
-}
+  gap: 6pt; }
 
 .text-small-normal {
   font-weight: normal;
   font-size: 12pt;
   text-decoration: none;
-  color: #4E2323;
-}
+  color: #4E2323; }
 
 .text-small-semi-bold {
   font-weight: bold;
   font-size: 14pt;
-  color: #4E2323;
-}
+  color: #4E2323; }
 
 .text-small-semi > * {
   font-weight: 600;
   font-size: 14pt;
   text-decoration: none;
-  color: #4E2323;
-}
+  color: #4E2323; }
 
 .text-large-bold {
   font-weight: bold;
   font-size: 28pt;
   color: #4E2323;
-  margin-block: 2pt;
-}
+  margin-block: 2pt; }
 
 .text-medium-normal {
   font-weight: normal;
   font-size: 20pt;
   color: #4E2323;
-  margin-block: 2pt;
-}
+  margin-block: 2pt; }
 
 .large-container {
   grid-column: 2/12;
   background-color: #FFEEE0;
   padding: 40pt 80pt;
   border-radius: 15pt;
-  filter: drop-shadow(0pt 2pt 5pt rgba(0, 0, 0, 0.15));
-}
+  filter: drop-shadow(0pt 2pt 5pt rgba(0, 0, 0, 0.15)); }
 
 .error {
   background-color: #ce555b;
-  position: absolute;
+  position: fixed;
   padding: 1rem;
   max-width: 100vw;
   bottom: 1rem;
   animation: whoosh 1.25s;
   left: 1rem;
   overflow-wrap: break-word;
-  z-index: 9999;
-}
-
-.error b {
-  font-weight: 600;
-  font-size: 14pt;
-}
-
-.error p {
-  font-weight: normal;
-  font-size: 12pt;
-}
+  z-index: 9999; }
+  .error b {
+    font-weight: 600;
+    font-size: 14pt; }
+  .error p {
+    font-weight: normal;
+    font-size: 12pt; }
 
 @keyframes whoosh {
   from {
     opacity: 0;
-    left: -100%;
-  }
+    left: -100%; }
   to {
     opacity: 1;
-    left: 1rem;
-  }
-}
+    left: 1rem; } }
 /**
 Diese Datei ist nicht selbstgeschrieben.
 Quelle: https://github.com/danilowoz/wipe.css
@@ -122,12 +101,16 @@ Quelle: https://github.com/danilowoz/wipe.css
  * 2. Inherit from default setting
  */
 * {
-  margin: 0; /* 1 */
-  padding: 0; /* 1 */
-  border: 0; /* 1 */
-  background-repeat: no-repeat; /* 1 */
-  box-sizing: inherit; /* 2 */
-}
+  margin: 0;
+  /* 1 */
+  padding: 0;
+  /* 1 */
+  border: 0;
+  /* 1 */
+  background-repeat: no-repeat;
+  /* 1 */
+  box-sizing: inherit;
+  /* 2 */ }
 
 /**
  * 1. Prevent certain mobile browsers from automatically zooming fonts.
@@ -135,9 +118,10 @@ Quelle: https://github.com/danilowoz/wipe.css
  * 3. Default scroll behavior (not smooth)
  */
 html {
-  box-sizing: border-box; /* 2 */
-  scroll-behavior: auto; /* 3 */
-}
+  box-sizing: border-box;
+  /* 2 */
+  scroll-behavior: auto;
+  /* 3 */ }
 
 /**
  * 1. Set default font styles
@@ -145,8 +129,8 @@ html {
  * 3. Prevent horizontal scroll
  */
 body {
-  font-size: 16px; /* 1 */
-}
+  font-size: 16px;
+  /* 1 */ }
 
 /**
  * All Headings look the same
@@ -156,8 +140,7 @@ h3,
 h4,
 h5 {
   font-size: 1em;
-  font-weight: normal;
-}
+  font-weight: normal; }
 
 /**
  * 1. Reset link styles
@@ -165,19 +148,21 @@ h5 {
  * 3. Remove the gray background on active links in IE 10.
  */
 a {
-  text-decoration: none; /* 1 */
-  color: inherit; /* 1 */
-  display: inline-block; /* 2 */
-  background-color: transparent; /* 3 */
-}
+  text-decoration: none;
+  /* 1 */
+  color: inherit;
+  /* 1 */
+  display: inline-block;
+  /* 2 */
+  background-color: transparent;
+  /* 3 */ }
 
 /**
  * No bullets anymore
  */
 ol,
 ul {
-  list-style: none;
-}
+  list-style: none; }
 
 /**
  * Remove all default styles and all elements look the same
@@ -194,46 +179,40 @@ textarea {
   letter-spacing: inherit;
   color: inherit;
   background: none;
-  vertical-align: top;
-}
+  vertical-align: top; }
 
 /**
  * Avoid no background on Edge and IE
  */
 option {
-  background-color: inherit;
-}
+  background-color: inherit; }
 
 /**
  * Set a color on active state
  */
 a:active,
 button:active {
-  color: inherit;
-}
+  color: inherit; }
 
 /**
  * You should define size for textarea
  */
 textarea {
-  resize: none;
-}
+  resize: none; }
 
 /**
  * Pointer cursor for buttons
  */
-input[type=button],
+input[type="button"],
 button {
-  cursor: pointer;
-}
+  cursor: pointer; }
 
 /**
  * Pointer default for disabled buttons
  */
 button[disabled],
 html input[disabled] {
-  cursor: default;
-}
+  cursor: default; }
 
 /**
  * 1. Remove space after each image
@@ -241,18 +220,20 @@ html input[disabled] {
  * 3. Remove the border on images inside links in IE 10.
  */
 img {
-  display: block; /* 1 */
-  max-width: 100%; /* 2 */
-  height: auto; /* 2 */
-  border-style: none; /* 3 */
-}
+  display: block;
+  /* 1 */
+  max-width: 100%;
+  /* 2 */
+  height: auto;
+  /* 2 */
+  border-style: none;
+  /* 3 */ }
 
 /**
  * Collapse border spacing
  */
 table {
-  border-collapse: collapse;
-}
+  border-collapse: collapse; }
 
 .big-button {
   text-decoration: none;
@@ -262,12 +243,10 @@ table {
   background-color: #38703E;
   border-radius: 50vh;
   padding: 5pt 10pt;
-  display: inline-block;
-}
+  display: inline-block; }
 
 .search-bar {
-  background-color: #FFEEE0;
-}
+  background-color: #FFEEE0; }
 
 .book-info-box {
   margin-top: 10px;
@@ -277,55 +256,46 @@ table {
   filter: drop-shadow(0pt 2pt 5pt rgba(0, 0, 0, 0.15));
   background-color: #FFEEE0;
   position: relative;
-  height: 630px;
-}
-
-.book-info-box .info-text {
-  position: absolute;
-  z-index: 3;
-  padding: 10px;
-  bottom: 0;
-  color: #4E2323;
-}
-
-.book-info-box .info-text p {
-  text-decoration: none;
-  font-weight: normal;
-  font-size: 12pt;
-  position: relative;
-  line-height: 1;
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  margin-bottom: 10pt;
-}
-
-.book-info-box .info-text h2 {
-  text-decoration: none;
-  font-weight: bold;
-  font-size: 20pt;
-  position: relative;
-  max-width: 100%;
-  line-height: 1;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  margin-bottom: 10pt;
-}
-
-.book-info-box img {
-  justify-content: center;
-  max-width: calc(100% - 20px);
-  width: auto;
-  height: calc(100% - 80px);
-  padding-bottom: 0;
-  border-radius: 15pt;
-  position: absolute;
-  z-index: 1;
-  left: 0;
-  right: 0;
-  margin-left: auto;
-  margin-right: auto;
-}
+  height: 630px; }
+  .book-info-box .info-text {
+    position: absolute;
+    z-index: 3;
+    padding: 10px;
+    bottom: 0;
+    color: #4E2323; }
+    .book-info-box .info-text p {
+      text-decoration: none;
+      font-weight: normal;
+      font-size: 12pt;
+      position: relative;
+      line-height: 1;
+      overflow: hidden;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      margin-bottom: 10pt; }
+    .book-info-box .info-text h2 {
+      text-decoration: none;
+      font-weight: bold;
+      font-size: 20pt;
+      position: relative;
+      max-width: 100%;
+      line-height: 1;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      margin-bottom: 10pt; }
+  .book-info-box img {
+    justify-content: center;
+    max-width: calc(100% - 20px);
+    width: auto;
+    height: calc(100% - 80px);
+    padding-bottom: 0;
+    border-radius: 15pt;
+    position: absolute;
+    z-index: 1;
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto; }
 
 .book-info-box:after {
   content: "";
@@ -337,8 +307,7 @@ table {
   height: 15%;
   background: linear-gradient(rgba(0, 0, 0, 0), #FFEEE0);
   z-index: 2;
-  border-radius: 15pt;
-}
+  border-radius: 15pt; }
 
 .book-carousel {
   grid-column: 1/13;
@@ -348,69 +317,56 @@ table {
   display: flex;
   overflow-x: auto;
   gap: 6pt;
-  margin-bottom: 40px;
-}
-
-.book-carousel .book-carousel-box {
-  flex: 0 0 calc(20% - 10px);
-  max-width: calc(20% - 10px);
-  height: auto;
-  padding: 10px;
-  border-radius: 15pt;
-  background-color: #FFEEE0;
-  position: relative;
-}
-
-.book-carousel .book-carousel-box .send-value-button {
-  border-radius: 15pt;
-  font-size: 11pt;
-  font-weight: 600;
-  color: #4E2323;
-  background-color: #FFEEE0;
-  padding: 7pt 10pt;
-  filter: drop-shadow(0pt 2pt 5pt rgba(0, 0, 0, 0.15));
-  position: absolute;
-  right: 20pt;
-  bottom: 10pt;
-}
-
-.book-carousel .book-carousel-box .info-text {
-  padding: 10px;
-  overflow: hidden;
-  color: #4E2323;
-}
-
-.book-carousel .book-carousel-box .info-text p {
-  text-decoration: none;
-  font-weight: normal;
-  font-size: 12pt;
-  line-height: 1;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  margin-top: 10pt;
-}
-
-.book-carousel .book-carousel-box .info-text h2 {
-  text-decoration: none;
-  font-weight: bold;
-  font-size: 20pt;
-  line-height: 1;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-}
-
-.book-carousel .book-carousel-box img {
-  justify-content: center;
-  max-width: calc(100% - 20px);
-  width: auto;
-  height: calc(100% - 80px);
-  border-radius: 15pt;
-  background-image: linear-gradient(to bottom, rgb(252, 81, 71) 100%, rgb(255, 238, 224) 100%);
-  left: 0;
-  right: 0;
-  margin-left: auto;
-  margin-right: auto;
-}
+  margin-bottom: 40px; }
+  .book-carousel .book-carousel-box {
+    flex: 0 0 calc(20% - 10px);
+    max-width: calc(20% - 10px);
+    height: auto;
+    padding: 10px;
+    border-radius: 15pt;
+    background-color: #FFEEE0;
+    position: relative; }
+    .book-carousel .book-carousel-box .send-value-button {
+      border-radius: 15pt;
+      font-size: 11pt;
+      font-weight: 600;
+      color: #4E2323;
+      background-color: #FFEEE0;
+      padding: 7pt 10pt;
+      filter: drop-shadow(0pt 2pt 5pt rgba(0, 0, 0, 0.15));
+      position: absolute;
+      right: 20pt;
+      bottom: 10pt; }
+    .book-carousel .book-carousel-box .info-text {
+      padding: 10px;
+      overflow: hidden;
+      color: #4E2323; }
+      .book-carousel .book-carousel-box .info-text p {
+        text-decoration: none;
+        font-weight: normal;
+        font-size: 12pt;
+        line-height: 1;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        margin-top: 10pt; }
+      .book-carousel .book-carousel-box .info-text h2 {
+        text-decoration: none;
+        font-weight: bold;
+        font-size: 20pt;
+        line-height: 1;
+        white-space: nowrap;
+        text-overflow: ellipsis; }
+    .book-carousel .book-carousel-box img {
+      justify-content: center;
+      max-width: calc(100% - 20px);
+      width: auto;
+      height: calc(100% - 80px);
+      border-radius: 15pt;
+      background-image: linear-gradient(to bottom, #fc5147 100%, #ffeee0 100%);
+      left: 0;
+      right: 0;
+      margin-left: auto;
+      margin-right: auto; }
 
 header {
   grid-column: 1/13;
@@ -418,34 +374,25 @@ header {
   justify-content: space-between;
   align-items: center;
   padding-block: 10pt;
-  height: 80pt;
-}
-
-header img {
-  width: 200pt;
-}
-
-header nav {
-  display: flex;
-  align-items: center;
-  gap: 15px;
-}
-
-header nav ul {
-  list-style-type: none;
-  padding: 0;
-  display: flex;
-  gap: 15px;
-  align-items: center;
-}
-
-header nav .profile-picture {
-  display: inline-block;
-  width: 40pt;
-  height: 40pt;
-  border-radius: 50%;
-  background-image: linear-gradient(#FFEEE0, #737373);
-}
+  height: 80pt; }
+  header img {
+    width: 200pt; }
+  header nav {
+    display: flex;
+    align-items: center;
+    gap: 15px; }
+    header nav ul {
+      list-style-type: none;
+      padding: 0;
+      display: flex;
+      gap: 15px;
+      align-items: center; }
+    header nav .profile-picture {
+      display: inline-block;
+      width: 40pt;
+      height: 40pt;
+      border-radius: 50%;
+      background-image: linear-gradient(#FFEEE0, #737373); }
 
 footer {
   grid-column: 1/13;
@@ -458,23 +405,16 @@ footer {
   left: 0;
   width: 100%;
   height: 50pt;
-  z-index: 2;
-}
-
-footer nav {
-  display: flex;
-  align-items: center;
-  gap: 15px;
-}
-
-footer nav ul {
-  list-style-type: none;
-  padding: 0;
-  display: flex;
-  gap: 15px;
-  align-items: center;
-}
-
-
+  z-index: 2; }
+  footer nav {
+    display: flex;
+    align-items: center;
+    gap: 15px; }
+    footer nav ul {
+      list-style-type: none;
+      padding: 0;
+      display: flex;
+      gap: 15px;
+      align-items: center; }
 
 /*# sourceMappingURL=styles.css.map */
