--- a/src/assets/styles/scss/book.scss
+++ b/src/assets/styles/scss/book.scss
@@ -43,4 +43,16 @@ a[href="/books.php"] {
     height: 2px;
     background-color: $text-color;
   }
+
+  .send-value-button {
+    border-radius: 15pt;
+    font-size: 11pt;
+    font-weight: 600;
+    color: $background-primary;
+    background-color: $accent-color;
+    padding: 7pt 10pt;
+    filter: $drop-shadow;
+    position: absolute;
+    right: 10px;
+  }
 }
