--- a/src/assets/styles/book.css
+++ b/src/assets/styles/book.css
@@ -1,6 +1,5 @@
 a[href="/books.php"] {
-  font-weight: bold;
-}
+  font-weight: bold; }
 
 .book-box {
   padding: 6pt;
@@ -9,30 +8,35 @@ a[href="/books.php"] {
   border-radius: 15pt;
   background-color: #FFEEE0;
   filter: drop-shadow(0pt 2pt 5pt rgba(0, 0, 0, 0.15));
-  margin-bottom: 40pt;
-}
-.book-box img {
-  border-radius: 15pt;
-  justify-content: center;
-  margin: auto;
-}
-.book-box h2 {
-  text-decoration: none;
-  font-weight: bold;
-  font-size: 20pt;
-}
-.book-box p {
-  text-decoration: none;
-  font-weight: normal;
-  font-size: 12pt;
-  position: relative;
-}
-.book-box .line {
-  position: absolute;
-  left: 0;
-  width: 100%;
-  height: 2px;
-  background-color: #4E2323;
-}
+  margin-bottom: 40pt; }
+  .book-box img {
+    border-radius: 15pt;
+    justify-content: center;
+    margin: auto; }
+  .book-box h2 {
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 20pt; }
+  .book-box p {
+    text-decoration: none;
+    font-weight: normal;
+    font-size: 12pt;
+    position: relative; }
+  .book-box .line {
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    background-color: #4E2323; }
+  .book-box .send-value-button {
+    border-radius: 15pt;
+    font-size: 11pt;
+    font-weight: 600;
+    color: #FFEEE0;
+    background-color: #38703E;
+    padding: 7pt 10pt;
+    filter: drop-shadow(0pt 2pt 5pt rgba(0, 0, 0, 0.15));
+    position: absolute;
+    right: 10px; }
 
 /*# sourceMappingURL=book.css.map */
