--- a/src/assets/styles/scss/components/_big-button.scss
+++ b/src/assets/styles/scss/components/_big-button.scss
@@ -7,4 +7,7 @@
   border-radius: 50vh;
   padding: 5pt 10pt;
   display: inline-block;
+  text-align: center;
+  min-height: 3rem;
+  justify-content: center;
 }
