--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -243,7 +243,10 @@ table {
   background-color: #38703E;
   border-radius: 50vh;
   padding: 5pt 10pt;
-  display: inline-block; }
+  display: inline-block;
+  text-align: center;
+  min-height: 3rem;
+  justify-content: center; }
 
 .search-bar {
   background-color: #FFEEE0; }
@@ -414,6 +417,20 @@ table {
     align-self: flex-start; }
   .editForm input[type="submit"]:hover {
     background-color: #ffc79c; }
+
+.outline-button {
+  text-decoration: none;
+  font-weight: normal;
+  font-size: 20pt;
+  color: #4E2323;
+  background-color: #FFEEE0;
+  border-radius: 50vw;
+  padding: 5pt 10pt;
+  display: inline-block;
+  outline: #4E2323 solid 1px;
+  text-align: center;
+  justify-content: center;
+  min-height: 3rem; }
 
 header {
   grid-column: 1/13;
